# wfchat

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  _.txt  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
apps/api/db/: init.sql
apps/api/migrations/: 202607040001_initial_schema.sql  202607100001_remove_manual_memory.sql  202607100002_remove_manual_memory_sync_entities.sql  202607100003_automatic_memory_foundation.sql  202607100004_memory_message_source_lifecycle.sql  202607110001_memory_extraction_outbox.sql  202607130001_memory_follow_up_deliveries.sql  202607140001_memory_extraction_temporal_context.sql  202607180001_aiko_cafe_mvp.sql  202607190001_aiko_cafe_round_rewards.sql  202607190002_aiko_cafe_cosmetic_loadouts.sql
apps/api/src/: admin.rs  app.rs  attachments.rs  auth.rs  cafe.rs  cafe_cosmetics.rs  characters.rs  chat.rs  config.rs  error.rs  lib.rs  main.rs  memory.rs  memory_evaluation.rs  rate_limit.rs  session.rs  state.rs  store.rs  sync.rs  voice.rs
apps/api/src/ai/: mod.rs
apps/api/src/ai/providers/: anthropic.rs  lmstudio.rs  mock.rs  mod.rs  openai.rs  xai.rs
apps/api/src/chat/: attachments.rs  messages.rs  mod.rs  voice.rs
apps/api/src/store/: attachments.rs  auth.rs  cafe.rs  chat.rs  memory.rs  mod.rs  sync.rs
docs/: _sync-known-gaps.md  agent-work-priority.md  aiko-cafe.md  app-navigation.md  architecture.md  automatic-memory.md  avatar-pngtuber.md  backend-architecture.md  characters.md  chat-image-attachments.md  chat-layout-scroll.md  chat-message-rendering-test-cases.md  chat-message-rendering.md  chat-sessions.md  chat-sse-streaming.md  chat-voice.md  ci.md  (+15 more)
(+172 files in other folders)
